# pdfparser

./: .gitignore  README.md  pyproject.toml
pdfparser/: datastructure.py  main.py  models.py  pdf_parser.py  report_generator.py  store.py
