[tool.poetry]
name = "pdfparser"
version = "0.1.0"
description = ""
authors = ["sarang s babu <sarangsbabu367@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pypdf2 = "^3.0.1"
tabula-py = "^2.9.0"
sqlalchemy = "^2.0.23"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
